# rd-pwa-offline-django-alpinejs

./: README.md  pyproject.toml
project/: settings.py  urls.py
project/pwa/: admin.py  apps.py  forms.py  models.py  views.py
project/pwa/management/commands/: fixtures.py
project/pwa/migrations/: 0001_initial.py
project/pwa/static/pwa/: manifest.json  pwa.html  sw.js
project/pwa/templates/: home.html  workouts.html
