[tool.poetry]
name = "rd-pwa-offline-django-alpinejs"
version = "0.1.0"
description = ""
authors = ["David Kwast <david.kwast@gmail.com>"]
license = "unlicense.org"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "~5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
